fix: system dark mode

--- a/src/components/layout/Navbar/Navbar.module.scss
+++ b/src/components/layout/Navbar/Navbar.module.scss
@@ -62,61 +62,3 @@
         }
     }
 }
-
-.responsive-menu {
-    position: fixed;
-    inset: 0;
-    background: rgb(var(--background));
-    color: rgb(var(--foreground));
-    height: 100%;
-    width: 75%;
-    max-width: 24rem;
-    border-right: 1px solid rgb(var(--border));
-    box-shadow: var(--shadow-lg);
-    padding: 1rem;
-    font-size: var(--font-s);
-
-    @include responsive(portraitPhone) {
-        max-width: none;
-    }
-
-    .header {
-        display: flex;
-        justify-content: space-between;
-
-        .logo {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-
-            .icon {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 2.25rem;
-                height: 2.25rem;
-
-                svg {
-                    border-radius: 50%;
-                    font-size: var(--font-l);
-                }
-            }
-
-            .text {
-                font-weight: 700;
-                letter-spacing: var(--letter-spacing-body-1);
-            }
-        }
-
-        .btn-close {
-            @include icon;
-        }
-    }
-}
-
-.bg-blur {
-    position: fixed;
-    inset: 0;
-    background: rgba(0, 0, 0, 0.8);
-}
